Server/src/main/kotlin/com/example/p2p_stock/errors/DealException.kt
package com.example.p2p_stock.errors

class NotFoundDealException(message:String):RuntimeException(message)
class DealUserSameException(message:String):RuntimeException(message)
class IllegalActionDealException(message:String):RuntimeException(message)